--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Secret Sleepover Society Timer</title>
-    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <script type="module" src="/src/timer-viewer.ts"></script>
   </head>
   <body>
